--- a/TubeCube/TubeCube.csproj
+++ b/TubeCube/TubeCube.csproj
@@ -58,7 +58,6 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <Folder Include="ViewControls\" />
 	  <Folder Include="ViewModels\" />
 	</ItemGroup>
 
@@ -75,6 +74,12 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <MauiXaml Update="ViewControls\Common\ErrorIndicator.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="ViewControls\Common\LoadingIndicator.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="Views\StartPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
